@@ -1,3 +1,6 @@
+2007-11-21
+    * Fix segmentation fault when given the wrong file as private/public key
+
 Version 1.05
 2007-11-16
     * Add option --modify-window that mimics the rsync option of the same
